--- a/source/scss/block/navigation.scss
+++ b/source/scss/block/navigation.scss
@@ -70,6 +70,9 @@
     padding-right: 0;
     padding-bottom: 6px;
     background-color: $primary-color;
+    max-height: 0;
+    overflow-y: hidden;
+    margin-bottom: -6px;
 
     @include media-breakpoint-up(md) {
       display: flex;
@@ -78,6 +81,14 @@
       width: 100%;
       margin-bottom: 0;
       padding: 0;
+    }
+
+    transition: all 0.7s;
+
+    &.opened {
+      margin-top: 0;
+      max-height: 1000px;
+      margin-bottom: 6px;
     }
   }
 
