--- a/source/scss/block/navigation.scss
+++ b/source/scss/block/navigation.scss
@@ -79,8 +79,10 @@
       align-items: stretch;
       justify-content: space-between;
       width: 100%;
-      margin-bottom: 0;
       padding: 0;
+      margin-top: 0;
+      max-height: 1000px;
+      margin-bottom: 6px;
     }
 
     transition: all 0.7s;
