--- a/source/scss/block/navigation.scss
+++ b/source/scss/block/navigation.scss
@@ -82,7 +82,7 @@
       padding: 0;
       margin-top: 0;
       max-height: 1000px;
-      margin-bottom: 6px;
+      margin-bottom: 0;
     }
 
     transition: all 0.7s;
