--- a/source/scss/block/navigation.scss
+++ b/source/scss/block/navigation.scss
@@ -72,7 +72,7 @@
     background-color: $primary-color;
     max-height: 0;
     overflow-y: hidden;
-    margin-bottom: -6px;
+    margin-bottom: 0;
 
     @include media-breakpoint-up(md) {
       display: flex;
