--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -82,7 +82,7 @@ a[href$=".zip"]::before {
 .footer {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: $primary-color;
+  background-color: #404b54;
   color: white;
 
   & a {
